# wavess

./: .gitattributes  .gitignore  .gitmodules  WMBENCH_COMPLETION_SUMMARY.md  WMBENCH_FINAL_CHECKLIST.md  WMBENCH_STRUCTURE.md  benchmark_attacks.py  benchmark_simple.py  colab_flexible_benchmark.ipynb  colab_gaussian_shading_benchmark.ipynb  colab_ringid_benchmark.ipynb  colab_robin_benchmark.ipynb  colab_ssl_benchmark.ipynb  dct_dwt_test.py  dwt_test_5.py  gaussianshading.ipynb  kaggle_gaussian_shading_benchmark.ipynb  kaggle_tree_ring_benchmark.ipynb  missing_components.txt  repair_venv_python.cmd  requirements-optional.txt  requirements.txt  results_leaderboard.csv  ringid_benchmark.py  run_benchmark_hidden_moe.py  run_colab_wmbench.sh  run_cpu_classical.ps1  run_flexible_gpu.ps1  strengths_fast.json  strong_strengths.json  wmbench_regen_attacks.py
tree-ring/: README.md  mainbenchmark  prompts.txt  pyproject.toml  results_averaged (1).csv  results_leaderboard (1).csv  treeringpaper.txt
tree-ring/configs/: base.yaml  base_calibrated.yaml
tree-ring/docs/: repro_protocol.md
tree-ring/outputs/: clean_detect_64_clean.json  clean_detect_fast.json  clean_detect_fast_pfix.json  wm_detect_64_clean.json  wm_detect_fast.json  wm_detect_fast_calibrated.json  wm_detect_fast_pfix.json
tree-ring/outputs/clean_64/: manifest.json
tree-ring/outputs/clean_fast/: manifest.json
tree-ring/outputs_benchmark_smoke/: results.csv  results.json
tree-ring/scripts/: run_detect.py  run_eval.py  run_generate.py
tree-ring/src/treering/: embed.py  (+9 more)
tree-ring/tests/: test_embed_detect.py
(+289 files in other folders)
