[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-ring-diffusers"
version = "0.1.0"
description = "Tree-Ring watermarking reproduction with Hugging Face Diffusers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.33.0",
  "diffusers>=0.30.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0.1",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.44.0",
  "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
